# libnss-vrfdns

./: Makefile.am  Readme.md  common.mk  configure.ac
debian/: changelog  control  copyright  libnss-vrfdns.postinst  libnss-vrfdns.postrm  rules
resolv/: mapv4v6addr.h  res_hconf.h  res_init.c
src/: Makefile.am  files-have_o_cloexec.c  libnss_vrfdns.map  libnss_vrffiles.map  nss_loader-test.c  nss_vrfdns.c  nss_vrfdns.h  nss_vrfhook.c  vrffiles-XXX.c  vrffiles-hosts.c  vrffiles-parse.c
